Einleitung zu elementaren Funktionen überarbeitet

--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -3129,23 +3129,33 @@ definiert, dass jede Cauchyfolge aus $X$ in $X$ konvergent ist.
   \end{align*}  
 \end{beispiel}
 
-
 \section{Elementare Funktionen}
-\paragraph{Bemerkungen über Grenzwerte und Stetigkeit von reellen Funktionen}
 
-Sei $D\subset \R , f\colon D\rightarrow \R$ eine reelle Funktion, $a\in\R$ ist Häufungspunkt von $D$. Man schreibt:
-\begin{enumerate}[(1)]
-  \item $\lim_{x\rightarrow a+0}f(x)=c\perdef \forall (x_n)\subset D\ x_n>a,x_n\rightarrow a\Rightarrow f(x_n)=c$ $f$ hat in $c$
-    den \emph{rechtsseitigen Grenzwert\index{Grenzwert!rechtsseitig}}.
-  \item $\lim_{x\rightarrow a-0}f(x)=c\perdef \forall (x_n)\subset D\ x_n<a,x_n\rightarrow a\Rightarrow f(x_n)=c$ $f$ hat in $c$
-    den \emph{linksseitigen Grenzwert\index{Grenzwert!linksseitig}}.
-  \item $\lim_{x\rightarrow a+0}f(x)=f(a)\perdef \forall \varepsilon >0\ \exists \delta >0 \forall x \in D\colon 0\leq x-a<\delta
-    \Rightarrow \abs{f(x)-f(a)}<\varepsilon$ $f$ ist \emph{linksseitig stetig\index{Stetigkeit!linksseitig}}.
-  \item $\lim_{x\rightarrow a-0}f(x)=f(a)\perdef \forall \varepsilon >0\ \exists \delta >0 \forall x \in D\colon 0\leq a-x<\delta
-    \Rightarrow \abs{f(x)-f(a)}<\varepsilon$ $f$ ist \emph{rechtsseitig stetig\index{Stetigkeit!rechtsseitig}}.
-  \item $\lim_{x\rightarrow\infty} f(x)=c\perdef \forall (x_n)\subset D (x_n \rightarrow \infty \Rightarrow f(x_n)\rightarrow c)$
-  \item $\lim_{x\rightarrow a} f(x)=\infty\perdef \forall (x_n)\subset D\\\{a\} (x_n \rightarrow a \Rightarrow f(x_n)\rightarrow \infty)$
-\end{enumerate}
+\begin{remark}[Grenzwerte und Stetigkeit von reellen Funktionen]
+  Sei $D\subset \R , f\colon D\rightarrow \R$ eine reelle Funktion,
+  $a\in\R$ ist Häufungspunkt von $D$. Man schreibt:
+  \begin{enumerate}[(1)]
+  \item $\lim_{x\rightarrow a+0}f(x)=c\perdef \forall (x_n)\subset
+    D\colon x_n>a, x_n\rightarrow a\Rightarrow f(x_n)=c$. Dann hat $f$ in $c$
+    den \highl[Grenzwert!rechtsseitig]{rechtsseitigen Grenzwert}.
+  \item $\lim_{x\rightarrow a-0}f(x)=c\perdef \forall (x_n)\subset
+    D\colon x_n<a,x_n\rightarrow a\Rightarrow f(x_n)=c$. Dann hat $f$
+    in $c$ den \highl[Grenzwert!linksseitig]{linksseitigen Grenzwert}.
+  \item $\lim_{x\rightarrow a+0}f(x)=f(a)\perdef \forall \varepsilon
+    >0 \exists \delta >0 \forall x \in D\colon 0\leq x-a<\delta
+    \Rightarrow \abs{f(x)-f(a)}<\varepsilon$. Dann ist $f$
+    \highl[Stetigkeit!linksseitig]{linksseitig stetig}.
+  \item $\lim_{x\rightarrow a-0}f(x)=f(a)\perdef \forall \varepsilon
+    >0 \exists \delta >0 \forall x \in D\colon 0\leq a-x<\delta
+    \Rightarrow \abs{f(x)-f(a)}<\varepsilon$. Dann ist $f$
+    \highl[Stetigkeit!rechtsseitig]{rechtsseitig stetig}.
+  \item $\lim_{x\rightarrow\infty} f(x)=c\perdef \forall (x_n)\subset
+    D (x_n \rightarrow \infty \Rightarrow f(x_n)\rightarrow c)$.
+  \item $\lim_{x\rightarrow a} f(x)=\infty\perdef \forall (x_n)\subset
+    D \setminus\{a\} (x_n \rightarrow a \Rightarrow f(x_n)\rightarrow
+    \infty)$.
+\end{enumerate}  
+\end{remark}
 
 \subsection{Polynome und rationale Funktionen}
 
