--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -3295,7 +3295,7 @@ $\exp\colon\R\rightarrow\R$ eine Funktion auf $\R$. Sie heißt
 
     Die Funktionalgleichung ist:
     \begin{align*}
-      \ln(\exp(ln (x)+ln(y))) &=\ln(\exp(ln(x))\cdot \exp(ln(y))) =
+      \ln(\exp(\ln (x)+\ln(y))) &=\ln(\exp(\ln(x))\cdot \exp(\ln(y))) =
       \ln(x\cdot y)\\
       \ln(x)+\ln(y) &= \ln (\exp (\ln(x))\cdot \exp (\ln(y)))= \ln
       (x\cdot y)
@@ -3309,7 +3309,7 @@ $\exp\colon\R\rightarrow\R$ eine Funktion auf $\R$. Sie heißt
 
 \begin{definition}
 \textbf{Exponentialfunktion zur Basis $a$} Sei $a>0, a\neq 1$. Dann heißt $\exp_a \colon\R\rightarrow\R$ definiert durch $\exp_a (x)\coloneqq
-exp(x\ ln (a))$ \emph{Exponentialfunktion\index{Exponentialfunktion}} zur Basis $a$.
+exp(x\ \ln (a))$ \emph{Exponentialfunktion\index{Exponentialfunktion}} zur Basis $a$.
 \end{definition}
 
 \begin{theorem}
@@ -3321,31 +3321,31 @@ Die Funktion $\exp_a \colon\R\rightarrow\R$ ist stetig und es gilt:
   \item $\exp_a (\frac{p}{q})=\sqrt[q]{a^p}=:a^{\frac{p}{q}}, p\in \Z , q\in \N$
 \end{enumerate}
 \end{theorem}
-\textbf{Beweis}: Stetigkeit: da $x \mapsto x \cdot \underbrace{ln (a)}_{Konstante}$\\
-$f(x)=x\cdot ln(a)\quad g(x)=\exp(x)\quad \exp_a(x)=g(f(x))$ Die Komposition von stetigen Funktionen ist wieder stetig.
+\textbf{Beweis}: Stetigkeit: da $x \mapsto x \cdot \underbrace{\ln (a)}_{Konstante}$\\
+$f(x)=x\cdot \ln(a)\quad g(x)=\exp(x)\quad \exp_a(x)=g(f(x))$ Die Komposition von stetigen Funktionen ist wieder stetig.
 \begin{enumerate}[i)]
   \item \begin{align*}
-    \exp(x+y) & = & \exp((x+y)ln (a))\\
-    & = & \exp(x \cdot ln (a))\cdot \exp(y\cdot ln(a))\\
+    \exp(x+y) & = & \exp((x+y)\ln (a))\\
+    & = & \exp(x \cdot \ln (a))\cdot \exp(y\cdot \ln(a))\\
     & = & \exp_a(x)\cdot \exp_a(y)
   \end{align*}
-  \item $n\in \N\colon \exp_a (n)=\exp(n\cdot ln(a))=\exp(ln(a^n))=a^n$\\
+  \item $n\in \N\colon \exp_a (n)=\exp(n\cdot \ln(a))=\exp(\ln(a^n))=a^n$\\
     $-n\in \N\colon \exp_a(n)=\frac{1}{\exp(-n)}=\frac{1}{a^{-n}}=a^n$
   \item $p\in \Z, q\in \N$\\
     $a^p=\exp_a(p)=\exp_a(q\frac{p}{q})=\left(\exp_a(\frac{p}{q})\right)^q\Rightarrow \exp_a(\frac{p}{q})=\sqrt[q]{a^p}=a^{\frac{p}{q}}$
 \end{enumerate}
 
 Bemerkung: \autoref{satz:expa} rechtfertigt die Bezeichnung $a^x\coloneqq \exp_a(x)$. Für $a=e$ hat man $e^x=\exp_e(x)=\exp(x)$, 
-da $ln(e)=1$. Die Funktionalgleichung aus \autoref{satz:expa} i) hat jetzt die Form $a^{x+y}=a^x\cdot a^y, x,y\in \R$
+da $\ln(e)=1$. Die Funktionalgleichung aus \autoref{satz:expa} i) hat jetzt die Form $a^{x+y}=a^x\cdot a^y, x,y\in \R$
 
 \begin{theorem}
 Für $a,b>0$ und $x,y\in \R$ gilt:
 \begin{enumerate}[i)]
   \item $(a^x)^y=a^{xy}$\\
-    Wegen $a^x=\exp(x \cdot ln(a))$ gilt $ln (a^x)=x \cdot ln (a)$. Damit $(a^x)^y=\exp(y\cdot ln(a^x))=\exp(xy\cdot ln(a))
+    Wegen $a^x=\exp(x \cdot \ln(a))$ gilt $\ln (a^x)=x \cdot \ln (a)$. Damit $(a^x)^y=\exp(y\cdot \ln(a^x))=\exp(xy\cdot \ln(a))
     =a^{xy}$
   \item $a^x\cdot b^x=(ab)^x$\\
-    $a^xb^x=\exp(x\cdot ln(a))\cdot \exp(x\cdot ln(b))=\exp(x(ln(a)+ln(b)))=\exp(x(ln(ab)))=(ab)^x$
+    $a^xb^x=\exp(x\cdot \ln(a))\cdot \exp(x\cdot \ln(b))=\exp(x(\ln(a)+\ln(b)))=\exp(x(\ln(ab)))=(ab)^x$
   \item $(\frac{1}{a})^x=\frac{1}{a^x}=a^{-x}$\\
     $(\frac{1}{a})^x=(a^{-1})^x=a^{-x}$
 \end{enumerate}
@@ -3355,8 +3355,8 @@ Es gilt $\exp_a \colon\R\rightarrow \bsofint{0,\infty}$ ist stetig und bijektiv 
 für $a>1$ und streng monoton fallend für $a<1$.
 Die Umkehrfunktion $log_a\coloneqq(\exp_a)^{-1}$ heißt \emph{Logarithmus\index{Logarithmus}} zur Basis $a$. Es gilt $log_a\colon
 \bsofint{0,\infty} \rightarrow \R$ ist stetig und streng monoton wachsend für $a>1$ und streng monoton fallend für $a<1$.\\
-\textbf{Beweis}: $\log_ax=\frac{ln(x)}{ln(a)}$\\
-$\exp_alog_a(x)=\exp(\frac{ln(x)}{ln(a)}\cdot ln (a))=\exp (ln (x))=x$
+\textbf{Beweis}: $\log_ax=\frac{\ln(x)}{\ln(a)}$\\
+$\exp_alog_a(x)=\exp(\frac{\ln(x)}{\ln(a)}\cdot \ln (a))=\exp (\ln (x))=x$
 
 \subsection{Die Potenzfunktion}
 \begin{definition}
