Abschnitt zu Definition diff'barer Funktionen überarbeitet
· Paket esdiff eingebunden
· Option [axes] bei Grafik entfernt
· Umgebungen und Fehler korrigiert


git-svn-id: https://svn.lug-jena.de/uni-skripte@3073 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -48,6 +48,7 @@
                          % Markierungen für offene Aufgaben zu setzen; wird
                          % auch für \help (s.u.) verwendet
 \usepackage{mathtools}   % Zur Definition von \abs und \norm
+\usepackage[text]{esdiff}
 
 \usetikzlibrary{calc,shapes.geometric}
 
@@ -2407,7 +2408,7 @@ Sei $f\colon D\rightarrow Y$ und $a \in D$. Die Funktion $f$ heißt genau dann
     f\colon\R\rightarrow \R\qquad f(x)=\begin{cases}\frac{x^2-1}{x-1} & x \neq
 					 1\\1 & x=1\end{cases}
   \end{gather*}
-  ist im Punkt $x=1$ \emph{nicht} stetig. Denn $lim_{x\rightarrow 1}f(x)=2\neq
+  ist im Punkt $x=1$ \emph{nicht} stetig. Denn $\lim_{x\rightarrow 1}f(x)=2\neq
   1=f(1)$. Setzt man den Funktionswert $2$ für $x=1$, so wäre die Funktion
   stetig.
 \end{beispiel}
@@ -3553,7 +3554,7 @@ dass $\abs{\cos x}, \abs{\sin x}\leq 1$.
   % The graphic
   \draw[help lines,step=0.5cm] (-1.4,-1.4) grid (1.4,1.4);
   \draw (0,0) circle (1cm);
-  \begin{scope}[axes]
+  \begin{scope}
     \draw[->] (-1.5,0) -- (1.5,0) node[right] {$x$} coordinate(x axis);
     \draw[->] (0,-1.5) -- (0,1.5) node[above] {$y$} coordinate(y axis);
     \foreach \x/\xtext in {-1, -.5/-\frac{1}{2}, 1}
@@ -3630,133 +3631,203 @@ dass $\abs{\cos x}, \abs{\sin x}\leq 1$.
   \end{align*}
 \end{definition}
 
-$c$ ist eindeutig bestimmt, denn:\\
-Seien $c_1,c_2 \in \R\colon \forall x \in D\colon f(x)=f(a)+c_1(x-a)+r_1(x)$ und $f(x)=f(a)+c_2(x-a)+r_2(x)$ und
-$\lim_{x\rightarrow a}\frac{r_1(x)}{x-a}=\lim_{x\rightarrow a}\frac{r_2(x)}{x-a}=0$\\
-$\Rightarrow c_1(x-a)+r_1(x)=c_2(x-a)+r_2(x)$\\
-$\Rightarrow c_1=c_2+\frac{r_2(x)}{x-a}-\frac{r_1(x)}{x-a}$\\
-$\Rightarrow c_1=c_2$
-Schreibweise: $f'(a)=c, \frac{df}{dx}(a)=c$
-
-$c$ heißt \emph{Ableitung\index{Ableitung}} von $f$ an der Stelle $a$. $f$ heißt genau dann
-\emph{differenzierbar} in $D$, wenn $f$ in jedem Punkt $a\in D$ diffenzierbar ist.
+Es gilt, $c$ ist eindeutig bestimmt. Denn seien $c_1,c_2 \in \R$. Dann
+ist für alle $x \in D$:
+\begin{align*}
+  f(x) &= f(a)+c_1(x-a)+r_1(x)\\
+  f(x) &=f(a)+c_2(x-a)+r_2(x)\\
+  \lim_{x\rightarrow a} \frac{r_1(x)}{x-a} &=\lim_{x\rightarrow
+    a}\frac{r_2(x)}{x-a}=0\\
+  &\Rightarrow c_1(x-a)+r_1(x)=c_2(x-a)+r_2(x)\\
+  &\Rightarrow c_1=c_2+\frac{r_2(x)}{x-a}-\frac{r_1(x)}{x-a}\\
+  &\Rightarrow c_1=c_2\text{ für } \lim_{x\rightarrow a}
+\end{align*}
 
 \begin{remark}
-Die Differenzierbarkeit einer Funktion $f$ in $a\in D$ ist gleich\-be\-deu\-tend mit der Approximierbarkeit
-durch eine affin-lineare Funktion, d.\,h. ein Polynom\index{Polynom} ersten Grades:
-\begin{gather*}L(x)=f(a)+c(x-a)\end{gather*}
-Der Graph von $L$ ist die Tangente an dem Graphen von $f$ in $(a,f(a))$.
+  Wir schreiben, $f'(a)=c$ oder $\diff{f}{x}(a)=c$. Weiterhin heißt
+  $c$ \highl{Ableitung} von $f$ an der Stelle $a$ und $f$ heißt genau
+  dann \emph{differenzierbar} in $D$, wenn $f$ in jedem Punkt $a\in D$
+  diffenzierbar ist.
+
+  Die Differenzierbarkeit einer Funktion $f$ in $a\in D$ ist
+  gleichbedeutend mit der Approximierbarkeit durch eine affin"=lineare
+  Funktion, d.\,h. ein Polynom\index{Polynom} ersten Grades:
+  \begin{gather*}
+    L(x)=f(a)+c(x-a)
+  \end{gather*}
+  Der Graph von $L$ ist die Tangente an dem Graphen von $f$ in
+  $(a,f(a))$.
 \end{remark}
 
-\begin{theorem}
-$f$ ist genau dann in $a\in D$ differenzierbar, wenn $\lim_{x\rightarrow a} \frac{f(x)-f(a)}{x-a}$
-existiert.\\
-\textbf{Beweis}:
-\begin{itemize}
-  \item["`$\Rightarrow$"'] Sei $f$ in $a\in D$ differenzierbar. Dann ist $f(x)=f(a)+c(x-a)+r(x)$ mit
-    $\lim_{x\rightarrow a}\frac{r(x)}{x-a}=0$\\
-    $\Rightarrow \frac{f(x)-f(a)}{x-a}=c+\frac{r(x)}{x-a}$\\
-    $\Rightarrow \lim_{x\rightarrow a} \frac{f(x)-f(a)}{x-a}=c$
-  \item["`$\Leftarrow$"'] Sei $\lim_{x\rightarrow a}
-  \frac{f(x)-f(a)}{x-a}\coloneqq c$\\
-    $r(x)\coloneqq f(x)-f(a)-c(x-a)$\\
-    Dann ist $f(x)=f(a)+c(x-a)+r(x)$ und $\frac{r(x)}{x-a}=
-    \frac{f(x)-f(a)}{x-a}-c\stackrel{x\rightarrow a}{\rightarrow}c-c=0$
-\end{itemize}
-\qed
+%Satz 1
+\begin{theorem}["`Schulversion"' der Differenzierbarkeit]
+  Die Funktion $f$ ist genau dann in $a\in D$ differenzierbar, wenn
+  $\lim_{x\rightarrow a} \frac{f(x)-f(a)}{x-a}$
+  existiert.
+  \begin{proof}
+    \begin{itemize}
+    \item["`$\Rightarrow$"'] Sei $f$ in $a\in D$ differenzierbar. Dann
+      ist $f(x)=f(a)+c(x-a)+r(x)$ mit $\lim_{x\rightarrow a}
+      \frac{r(x)}{x-a}=0$. Umstellen der Gleichung ergibt
+      $\frac{f(x)-f(a)}{x-a}=c+\frac{r(x)}{x-a}$. Aufgrund der
+      Limesbedingung ergibt sich dann $\lim_{x\rightarrow a}
+      \frac{f(x)-f(a)}{x-a}=c$.
+    \item["`$\Leftarrow$"'] Sei $\lim_{x\rightarrow a}
+      \frac{f(x)-f(a)}{x-a}\coloneqq c$ und $r(x)\coloneqq
+      f(x)-f(a)-c(x-a)$. Dann ist $f(x)=f(a)+c(x-a)+r(x)$ und
+      $\frac{r(x)}{x-a}=
+      \frac{f(x)-f(a)}{x-a}-c\xrightarrow{x\rightarrow a} c-c=0$.
+    \end{itemize}
+  \end{proof}
 \end{theorem}
 
-\paragraph{Geometrische Interpretation}
-Der Differenzenquotient\index{Differenzenquotient}
-$\frac{f(x)-f(a)}{x-a}$ ist die Steigung der Sekante
-\index{Sekante} von $f$ durch die Punkte $(x,f(x))$ und
-$(a,f(a))$. Beim Grenzübergang $x\rightarrow a$ geht die Sekante in
-die Tangente\index{Tangente} vom Graphen $f$ im Punkt $(a,f(a))$
-über. $f'(a)$ ist also die Steigung der Tangente in $(a,f(a))$.
+\begin{remark}[Geometrische Interpretation]
+  Der \highl{Differenzenquotient} $\frac{f(x)-f(a)}{x-a}$ ist die
+  Steigung der \highl{Sekante} von $f$ durch die Punkte $(x,f(x))$ und
+  $(a,f(a))$. Beim Grenzübergang $x\rightarrow a$ geht die Sekante in
+  die \highl{Tangente} vom Graphen $f$ im Punkt $(a,f(a))$ über. Also
+  ist $f'(a)$ die Steigung der Tangente in $(a,f(a))$.
+\end{remark}
 
-Beispiele:
-\begin{enumerate}[(1)]
-\item $f\colon\R\rightarrow\R, f(x)=c$ konstante Funktion\\
-  Es gilt: $f'(a)=0$\\
-  Beweis: $f'(a)=lim_{x\rightarrow
-    a}\frac{f(x)-f(a)}{x-a}=\lim_{x\rightarrow a}\frac{c-c}{x-a}=0$
-\item $f\colon\R\rightarrow\R, f(x)=cx, f'(a)=c$\\
-  Beweis: $f'(a)=lim_{x\rightarrow
-    a}\frac{f(x)-f(a)}{x-a}=\lim_{x\rightarrow a}\frac{cx-ca}{x-a}
-  =\lim_{x\rightarrow a}\frac{c(x-a)}{x-a}=c$
-\item $f\colon\R\rightarrow\R, f(x)=e^x, f'(a)=e^x$ Exponentialfunktion\\
-  Beweis: $f'(a)=lim_{x\rightarrow
-    a}\frac{f(x)-f(a)}{x-a}=\lim_{x\rightarrow a}\frac{e^x-e^a}{x-a}=
-  \lim_{x\rightarrow a}e^a\frac{e^{x-a}-1}{x-a}=$\\
-  $\lim_{x\rightarrow a}\underbrace{e^a}_{\text{konstant}}
-  \underbrace{\lim_{x\rightarrow
-      a}\frac{e^{x-a}-1}{x-a}}_{=1}=e^a\cdot 1$
+\begin{beispiel}
+  \begin{enumerate}[(1)]
+  \item $f\colon\R\rightarrow\R, f(x)=c$ konstante Funktion. Es gilt:
+    $f'(a)=0$. Denn $f'(a)=\lim_{x\rightarrow a} \frac{f(x)-f(a)}{x-a}
+    =\lim_{x\rightarrow a} \frac{c-c}{x-a}=0$.
+  \item $f\colon\R\rightarrow\R, f(x)=cx, f'(a)=c$. Denn: $f'(a)=
+    \lim_{x\rightarrow a} \frac{f(x)-f(a)}{x-a} =\lim_{x\rightarrow a}
+    \frac{cx-ca}{x-a} =\lim_{x\rightarrow a}\frac{c(x-a)}{x-a}=c$.
+  \item $f\colon\R\rightarrow\R, f(x)=e^x, f'(a)=e^x$
+    Exponentialfunktion. Denn: $f'(a)=\lim_{x\rightarrow a}
+    \frac{f(x)-f(a)}{x-a} =\lim_{x\rightarrow a} \frac{e^x-e^a}{x-a}=
+    \lim_{x\rightarrow a}e^a\frac{e^{x-a}-1}{x-a}= \lim_{x\rightarrow
+      a} \underbrace{e^a}_{\text{konstant}}
+    \underbrace{\lim_{x\rightarrow
+        a}\frac{e^{x-a}-1}{x-a}}_{=1}=e^a\cdot 1$.
  \end{enumerate}
-
-\textbf{Korollar} Ist $f\colon D\rightarrow\R$ in $a\in D$ differenzierbar, so ist $f$ in $a$ stetig.\\
-Beweis: $f(x)=f(a)+f'(a)(x-a)+r(x), \lim_{x\rightarrow a}\frac{r(x)}{x-a}=0$\\
-$\frac{r(x)}{x-a}\rightarrow 0 \Rightarrow \lim_{x\rightarrow a}r(x)=0$\\
-Denn es gilt: $\lim r(x)=\lim (x-a)\frac{r(x)}{x-a}=\lim (x-a)\lim\frac{r(x)}{x-a}=0\cdot 0=0$\\
-Somit folgt: $\lim_{x\rightarrow a}f(x)=\lim(f(a)+f'(a)(x-a)+r(x))=\lim f(a)+\lim f'(a)(x-a)+\lim r(x)
-=f(a)+0+0=f(a)$
+\end{beispiel}
 
 \begin{theorem}
-\begin{enumerate}[(1)]
-  \item Seien $f,g\colon D\rightarrow \R$ in $x\in D$ differenzierbar und $\lambda\in\R$. Dann sind die 
-    Funktionen $f+g, \lambda f, f\circ g\colon D\rightarrow\R$ in $x\in D$ differenzierbar und es gilt:
-    \begin{itemize}
-      \item $(f+g)'(x)=f'(x)+g'(x)$
-      \item $(\lambda f)'(x)=\lambda f'(x)$
-      \item $(f\cdot g)'(x)=f'(x)g(x)+f(x)g'(x)$
-    \end{itemize}
-    Ist $g(\xi)\neq 0$ für alle $\xi\in D$, so ist $\frac{f}{g}\colon D\rightarrow\R$ in $x\in D$ differenzierbar 
-    und es gilt:
-    \begin{itemize}
-      \item $(\frac{f}{g})'=\frac{f'(x)g(x)-f(x)g'(x)}{(g(x))^2}$
-    \end{itemize}
-  \item \textbf{Kettenregel} Seien $f\colon D\rightarrow\R, g\colon E\rightarrow\R$ Funktionen mit $f(D)\subset E$ und
-    $f$ sei in $x\in D$ und $g$ in $y=f(x)$ differenzierbar. Dann ist $g\circ f\colon D\rightarrow\R$ in $x$
-    differenzierbar und es gilt:
-    \begin{itemize}
-      \item $(g\circ f)'(x)=g'(f(x))\cdot f'(x)$
-    \end{itemize}
-  \item \textbf{Ableitung der Umkehrfunktion} Sei $D\subset \R$ ein abgeleitetes Intervall und 
-    $f\colon D\rightarrow\R$ eine stetige, streng monotone Funktion und $f^{-1}\colon\tilde{D}=f(D)\rightarrow\R$
-    die Umkehrfunktion. Ist weiterhin $f$ in $x\in D$ differenzierbar und $f'(x)\neq 0$, so ist
-    $f^{-1}$ in $y=f(x)$ differenzierbar. Es gilt
-    \begin{itemize}
-      \item $(f^{-1})'(x)=\frac{1}{f'(x)}=\frac{1}{f'(f^{-1}(y))}$
-    \end{itemize}
-\end{enumerate}
+  Ist $f\colon D\rightarrow\R$ in $a\in D$ differenzierbar, so ist $f$
+  in $a$ stetig.
+  \begin{proof}
+    $f(x)=f(a)+f'(a)(x-a)+r(x), \lim_{x\rightarrow
+      a}\frac{r(x)}{x-a}=0, \frac{r(x)}{x-a}\rightarrow 0 \Rightarrow
+    \lim_{x\rightarrow a}r(x)=0$. Denn es gilt: $\lim_{x\rightarrow a}
+    r(x)=\lim_{x\rightarrow a} (x-a)\frac{r(x)}{x-a}=\lim_{x\rightarrow a}
+    (x-a) \lim_{x\rightarrow a} \frac{r(x)}{x-a}=0\cdot 0=0$. Somit folgt:
+    $\lim_{x\rightarrow a} f(x)=\lim_{x\rightarrow a}
+    (f(a)+f'(a)(x-a)+r(x))=\lim_{x\rightarrow a}
+    f(a)+\lim f'(a)(x-a)+\lim r(x) =f(a)+0+0=f(a)$ und es folgt die Stetigkeit.
+  \end{proof}
 \end{theorem}
 
-Beispiele:
+%Satz 2
+\begin{theorem}[Rechenregeln für differenzierbare Funktionen]
 \begin{enumerate}[(1)]
-  \item $f(x)=\ln x\quad f'(x)=\frac{1}{x}$\\
-    Beweis: $f(x)=\ln x=g^{-1}(x)\ g(x)=e^x\ (g^{-1'}(x))=
-    \frac{1}{(g(x))'(g^{-1}(x))}=\frac{1}{e^{\ln x}}=\frac{1}{x}$
-  \item $f(x)=h(x)^{g(x)}\ h>0$ differenzierbar und $g$ differenzierbar\\
-    $f'(x)=h(x)^{g(x)}(\frac{h'(x)g(x)}{h(x)}+g'(x)\ln h(x))$\\
-    Beweis: $(h(x)^{g(x)})'=(e^{g(x)\ln h(x)})'=e^{g(x)\ln h(x)}
-    (g(x)\ln h(x))'$\\
-    $=h(x)^{g(x)}(g'(x)\ln h(x)+g(x)\frac{h'(x)}{h(x)})$
-  \item $f(x) = x^\alpha \quad f'(x) = \alpha x^{\alpha-1}$\\
-    Beweis: $h(x)=x\quad g(x)=\alpha\quad f'(x)=(x^\alpha)'=x^\alpha
-    (0x+\frac{\alpha 1}{x})=\alpha x^{\alpha-1}$
-  \item $f(x) = a^x \quad f'(x) = a^x \ln a$\\
-    Beweis: $h(x)=a\quad g(x)=x\quad f'(x)=(a^x)'=a^x(1\ln a+0)=a^x\ln a$
-  \item $f(x) = x^x \quad f'(x) = x^x(1+\ln x)$\\
-    Beweis: $h(x)=x\quad g(x)=x\quad f'(x)=(x^x)'=x^x(\ln x+1)$
-  \item $(\cos x)'=-\sin x\quad (\sin x)'=\cos x$\\
-    Beweis: $(e^z)'=e^z, z\in\C\quad (e^z)'=\lim_{h\rightarrow 0}
-    \frac{e^{z+h}-e^z}{h}=e^z$\\
-    $x\in\R\colon e^{ix}=\cos x+i\sin x$
+\item Seien $f,g\colon D\rightarrow \R$ in $x\in D$ differenzierbar
+  und $\lambda\in\R$. Dann sind die Funktionen $f+g, \lambda f, f\circ
+  g\colon D\rightarrow\R$ in $x\in D$ differenzierbar und es gilt:
+  \begin{itemize}
+  \item $(f+g)'(x)=f'(x)+g'(x)$
+  \item $(\lambda f)'(x)=\lambda f'(x)$
+  \item \highl{Produktregel}: $(f\cdot g)'(x)=f'(x)g(x)+f(x)g'(x)$
+  \end{itemize}
+  Ist $g(\xi)\neq 0$ für alle $\xi\in D$, so ist $\frac{f}{g}\colon
+  D\rightarrow\R$ in $x\in D$ differenzierbar und es gilt:
+  \begin{itemize}
+  \item $(\frac{f}{g})' (x) =\frac{f'(x)g(x)-f(x)g'(x)}{(g(x))^2}$
+  \end{itemize}
+\item \highl{Kettenregel}: Seien $f\colon D\rightarrow\R, g\colon
+  E\rightarrow\R$ Funktionen mit $f(D)\subset E$ und $f$ sei in $x\in
+  D$ und $g$ in $y=f(x)$ differenzierbar. Dann ist $g\circ f\colon
+  D\rightarrow\R$ in $x$ differenzierbar und es gilt:
+  \begin{itemize}
+  \item $(g\circ f)'(x)=g'(f(x))\cdot f'(x)$
+  \end{itemize}
+\item \highl[Umkehrfunktion!Ableitung]{Ableitung der Umkehrfunktion}:
+  Sei $D\subset \R$ ein abgeschlossenes Intervall und $f\colon
+  D\rightarrow\R$ eine stetige, streng monotone Funktion sowie
+  $f^{-1}\colon\tilde{D}=f(D)\rightarrow\R$ die Umkehrfunktion. Ist
+  weiterhin $f$ in $x\in D$ differenzierbar und $f'(x)\neq 0$, so ist
+  $f^{-1}$ in $y=f(x)$ differenzierbar. Es gilt
+  \begin{itemize}
+  \item $(f^{-1})'(x)=\frac{1}{f'(x)}=\frac{1}{f'(f^{-1}(y))}$
+  \end{itemize}
+\end{enumerate}
+\begin{proof}
+  Die Produktregel lässt sich wie folgt beweisen: Sei $x\in D$ und
+  $x+h\in D$. Für den Differenzenquotient ergibt sich dann:
+  \begin{align*}
+    \frac{(fg)(x+h)-(fg)(x)}{h} &= \frac{f(x+h)g(x+h)-f(x)g(x)}{h} =
+       \frac{f(x+h)g(x+h)-f(x+h)g(x)+f(x+h)g(x)-f(x)g(x)}{h}\\
+    &= f(x+h)\frac{g(x+h)-g(x)}{h}+ g(x)\frac{f(x+h)-f(x)}{h}\\
+    &\xrightarrow{h\rightarrow0} f(x)g'(x)+f'(x)g(x)
+  \end{align*}
+
+  Zum Beweis der Quotientenregel betrachten wir zunächst den Spezialfall
+  $\nicefrac{1}{g}$:
+  \begin{align*}
+    \frac{(\frac{1}{g})(x+h)-(\frac{1}{g})(x)}{h} &= \frac{\frac{1}{g(x+h)}-
+       \frac{1}{g}}{h}=\frac{\frac{g(x)-g(x+h)}{g(x+h)g(x)}}{h}\\
+    &= -\frac{1}{g(x+h)g(x)} \frac{g(x+h)-g(x)}{h}\\
+    &\xrightarrow{h\rightarrow0} -\frac{g'(x)}{(g(x))^{2}}
+  \end{align*}
+  Allgemein haben wir dann:
+  \begin{align*}
+    \left(\frac{f}{g}\right)'(x) &= f'(x)\cdot(\frac{1}{g})(x)+
+       f(x)\cdot(\frac{1}{g})'(x)=
+       \frac{f'(x)}{g(x)}-f(x)\cdot\frac{g'(x)}{(g(x))^{2}}\\
+    &= \frac{f'(x)g(x)-f(x)g'(x)}{(g(x))^{2}}
+  \end{align*}
+
+  Für den Beweis der Kettenregel definieren wir $g^{*}\colon E\rightarrow\R$
+  durch:
+  \begin{gather*}
+    g^{*}(\rho)=
+       \begin{cases}
+	 \frac{g(\rho)-g(y)}{\rho-y} & \rho\neq y\\
+	 g'(y) & \rho=y
+       \end{cases}
+  \end{gather*}
+  Es gilt, $\lim_{\rho\rightarrow y} g^{*}(\rho)= g'(y)$, d.\,h. $g^{*}$ ist
+  in $y$ stetig. Für $\rho\in E$ ist $g(\rho)-g(y)= g^{*}(\rho)(\rho-y)$.
+  Somit haben wir:
+  \begin{align*}
+    (g\circ f)'(x) &= \lim_{\xi\rightarrow x} \frac{g(f(\xi))-g(f(x))}{\xi-x}=
+       \lim_{\xi\rightarrow x} g^{*}(f(\xi))\cdot\frac{f(\xi)-f(x)}{\xi-x}\\
+    &= \lim_{\xi\rightarrow x} g^{*}(f(\xi))\cdot\lim_{\xi\rightarrow x}
+       \frac{f(\xi)-f(x)}{\xi-x}= g'(f(x))f'(x)
+  \end{align*}
+\end{proof}
+\end{theorem}
+
+\begin{beispiel}
+  \begin{enumerate}[(1)]
+  \item $f(x)=\ln x, f'(x)=\frac{1}{x}$. Denn: $f(x)=\ln x=g^{-1}(x)$ mit
+    $g(x) =e^x$ und $(g^{-1})'(x)= \frac{1}{(g(x))'(g^{-1}(x))}=
+    \frac{1}{e^{\ln x}}=\frac{1}{x}$.
+   \item $f(x)=h(x)^{g(x)}$ für $h>0$ differenzierbar und $g$ differenzierbar.
+    Dann ist $f'(x)=h(x)^{g(x)}(\frac{h'(x)g(x)}{h(x)}+g'(x)\ln h(x))$. Denn:
+    $(h(x)^{g(x)})'=(e^{g(x)\ln h(x)})'=e^{g(x)\ln h(x)} (g(x)\ln h(x))'
+    =h(x)^{g(x)}(g'(x)\ln h(x)+g(x)\frac{h'(x)}{h(x)})$.
+  \item $f(x) = x^\alpha, f'(x) = \alpha x^{\alpha-1}$. Denn: $h(x)=x$ und
+    $g(x)=\alpha$. Also $f'(x)=(x^\alpha)'=x^\alpha
+    (0x+\frac{\alpha 1}{x})=\alpha x^{\alpha-1}$.
+  \item $f(x) = a^x, f'(x) = a^x \ln a$. Denn: $h(x)=a, g(x)=x$ und
+    $f'(x)=(a^x)' =a^x(1\ln a+0)=a^x\ln a$.
+  \item $f(x) = x^x, f'(x) = x^x(1+\ln x)$. Denn: $h(x)=x, g(x)=x$ und
+    $f'(x)=(x^x)'=x^x(\ln x+1)$.
+  \item $(\cos x)'=-\sin x, (\sin x)'=\cos x$. Denn: $(e^z)'=e^z$ für $z\in\C$
+    und $(e^z)'=\lim_{h\rightarrow 0} \frac{e^{z+h}-e^z}{h}=e^z$. Für $x\in\R$
+    gilt, $e^{ix}=\cos x+i\sin x$.
     \begin{align*}
-      (\cos x+i\sin x) & = & (\cos x)'+i(\sin x)'=(e^{ix})'=ie^{ix}\\
-      & = & (\cos x+i\sin x)i=i\cos x-\sin x\\
-      & \Rightarrow & (\cos x)'=-\sin x, (\sin x)'=\cos x
+      (\cos x+i\sin x)' &= (\cos x)'+i(\sin x)'=(e^{ix})'=ie^{ix}\\
+     &= (\cos x+i\sin x)i=i\cos x-\sin x\\
+      &\Rightarrow (\cos x)'=-\sin x, (\sin x)'=\cos x
     \end{align*}
 \end{enumerate}
+\end{beispiel}
 
 \section{Ableitung höherer Ordnung}
 \begin{definition}
