--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -605,7 +605,7 @@ Es existiert genau eine obere Schranke für $M$. Denn sind $S_1, S_2$
 kleinste obere Schranken von $M$, dann gilt sowohl $S_1 \leq S_2$ wie
 auch $S_2 \leq S_1$. Daraus folgt nun aber $S_1= S_2$.
 
-\begin{theorem}[\highl{Vollständigkeitsaxiom}] Jede
+\begin{theorem}[Vollständigkeitsaxiom\index{Vollständigkeitsaxiom}] Jede
   nichtleere, nach oben beschränkte Menge reeller Zahlen besitzt ein
   Supremum. $\forall M(M \subset \R \text{ n.\,o.\,b. } M \neq \emptyset
   \Rightarrow \sup M \in \R)$
@@ -1712,7 +1712,7 @@ Sei $(X,d)$ ein metrischer Raum. Eine Folge $(a_n) \subset X$ heißt genau dann
   $\Q$. Aber der Grenzwert ist $\sqrt{2}\notin \Q$.
 \end{remark}
 
-\begin{theorem}[Cauchysches Konvergenzkriterium in $\R$\index{Konvergenzkriterium!Cauchysches}]
+\begin{theorem}[Cauchysches Konvergenzkriterium in den reellen Zahlen\index{Konvergenzkriterium!Cauchysches}]
 \label{satz:CKonv}
   Eine Folge $(a_n)\subset \R$ ist genau dann konvergent, wenn sie eine
   Cauchyfolge ist.
@@ -2439,7 +2439,7 @@ Sei $f\colon D\rightarrow Y$ und $a \in D$. Die Funktion $f$ heißt genau dann
 \end{theorem}
 
 \section{\texorpdfstring{$\varepsilon$-$\delta$}{Epsilon-Delta}-Stetigkeit}
-\begin{theorem}[$\epsilon$"~$\delta$"~Definition der Stetigkeit]\label{satz:e-d-stetig}
+\begin{theorem}[Epsilon"=Delta"=Definition der Stetigkeit]\label{satz:e-d-stetig}
   Sei $D\subset X, f\colon D\rightarrow Y$. Die Funktion $f$ ist genau dann im
   Punkt $a\in D$ stetig, wenn:
   \begin{gather*}
@@ -3269,7 +3269,7 @@ $\exp\colon\R\rightarrow\R$ eine Funktion auf $\R$. Sie heißt
     Stetigkeit in $x=0$. Die Stetigkeit in beliebigem $x_0\in \R$
     ergibt sich durch: $\lim_{x\rightarrow x_0} \exp(x)
     =\lim_{x\rightarrow x_0} (\exp(x-x_0)\cdot \exp(x_0))=
-    \lim_{xß x_0\rightarrow 0} \exp(x-x_0)\cdot \lim_{x\rightarrow
+    \lim_{x_0\rightarrow 0} \exp(x-x_0)\cdot \lim_{x\rightarrow
       x_0} \exp(x_0)= \exp(0)\cdot \exp(x_0) =\exp(x_0)$.
 
     Nun müssen wir zeigen, dass $\exp$ streng monoton wachsend ist:
@@ -3310,7 +3310,7 @@ $\exp\colon\R\rightarrow\R$ eine Funktion auf $\R$. Sie heißt
 
 \subsection{Exponentialfunktion zur Basis \texorpdfstring{$a$}{a}}
 
-\begin{definition}[Exponentialfunktion zur Basis $a$]
+\begin{definition}[Exponentialfunktion zur Basis a]
   Sei $a>0, a\neq 1$. Dann heißt $\exp_a \colon\R\rightarrow\R$
   definiert durch $\exp_a (x)\coloneqq exp(x \ln (a))$
   \highl{Exponentialfunktion} zur Basis $a$.
@@ -3486,7 +3486,7 @@ Weiterhin gilt:
 
 Die Reihe $\sum_{k=0}^\infty \frac{z^k}{k!}$ ist für jedes $z\in\C$
 absolut konvergent, d.\,h. $\sum \frac{\abs{z^k}}{k!}  <\infty$.
-\begin{definition}[Exponentialfunktion in $\C$]
+\begin{definition}[Exponentialfunktion in den komplexen Zahlen]
   Man bezeichnet
   \begin{gather*}
     e^z\coloneqq\exp(z)=\sum_{k=0}^\infty \frac{z^k}{k!}\quad
