--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -5162,6 +5162,9 @@ Seien $f,g\colon[a,b]\rightarrow\R$ stetig differenzierbar. Dann gilt:
 \bibitem{barner} \textsc{Barner}, \textsc{Flohr}: Analysis, Band I.
 \end{thebibliography}
 
+% Behebt das Problem der vielen "`overfull \hbox"' im Index
+% <news:3419172.ueajl5DJLB@mjk.komascript.de>
+\setlength{\parfillskip}{0pt plus 1fil}
 \printindex
 \end{document}
 
