Begriff Kryptografie definiert
git-svn-id: https://svn.lug-jena.de/uni-skripte@3098 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kubieziel-itsich/vorlesung.ltx
+++ b/kubieziel-itsich/vorlesung.ltx
@@ -23,7 +23,12 @@
 \usepackage{todonotes}   % definiert den Befehl \todo{} um sich leicht
                          % Markierungen für offene Aufgaben zu setzen; wird
                          % auch für \help (s.u.) verwendet
-
+\usepackage{amsmath}
+\usepackage[all,warning]{onlyamsmath}  % warnt bei Verwendung von nicht
+                                       % amsmath-Umgebungen z.\,B. $$...$$
+\usepackage{amssymb}     % wird für \R, \C,... gebraucht
+\usepackage{fixmath}     % ISO-konforme griech. Buchstaben
+\usepackage{graphicx}
 
 
 \title{IT-Sicherheit}
@@ -129,4 +134,23 @@
     Gibt es weitere Fragen?
   \end{center}
 \end{frame}
+
+\section{Kryptographie}
+
+\begin{frame}
+  \frametitle{Kryptographie}
+  \begin{definition}
+    \emph{Kryptographie} ist die Lehre von den Methoden zur Ver- und
+    Entschlüsselung von Nachrichten.
+  \end{definition}
+  \begin{definition}
+    \emph{Kryptoanalyse} ist die Lehre von der Entschlüsselung von
+    Nachrichten ohne Zugriff auf den Schlüssel.
+  \end{definition}
+  \begin{definition}
+    \emph{Kryptologie} ist der Oberbegriff der beiden Teilgebiete.
+  \end{definition}
+\end{frame}
+
+
 \end{document}
