--- a/kubieziel-itsich/vorlesung.ltx
+++ b/kubieziel-itsich/vorlesung.ltx
@@ -152,5 +152,73 @@
   \end{definition}
 \end{frame}
 
+\begin{frame}
+  \frametitle{Kryptosystem}
+  \framesubtitle{Alphabet}
+  Seien $\Sigma$ und $\Gamma$ zwei endliche Alphabete und
+  $\Sigma^{\ast}, \Gamma^{\ast}$ die Menge aller Worte über $\Sigma$
+  bzw. $\Gamma$.
+\end{frame}
+
+\begin{frame}
+  \frametitle{Kryptosystem}
+  \framesubtitle{Klartextraum}
+  \begin{definition}
+    Eine nichtleere Menge von Nachrichten $\mathcal{M}\subseteq\Sigma^{\ast}$
+    wird als \emph{Klartextraum} bezeichnet. Ein Element
+    $m\in\mathcal{M}$ heißt \emph{Nachricht}.
+  \end{definition}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Kryptosystem}
+  \framesubtitle{Geheimtextraum}
+  \begin{definition}
+    Eine nichtleere Menge von Chiffretexten
+    $\mathcal{C}\subseteq\Gamma^{\ast}$ wird als \emph{Geheimtextraum}
+    bezeichnet. 
+  \end{definition}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Kryptosystem}
+  \framesubtitle{Schlüsselraum}
+  \begin{definition}
+    Der \emph{Schlüsselraum} besteht aus nichtleeren Mengen $K_{e}$
+    und $K_{d}$ sowie einer bijektiven Abbildung $f\colon
+    K_{e}\rightarrow K_{d}$.
+  \end{definition}
+  Somit gibt es für jeden $k_{e}\in K_{E}$ einen passenden $k_{d}\in
+  K_{d}$. Also $f(K_{e})= K_{d}$.
+\end{frame}
+
+\begin{frame}
+  \frametitle{Kryptosystem}
+  \framesubtitle{Verschlüsselungsalgorithmus}
+  \begin{definition}
+    Eine linkstotale und injektive Abbildung $E\colon\mathcal{M}\times
+    \mathcal{K}\rightarrow\mathcal{C}$ wird als
+    \emph{Verschlüsselungsalgorithmus} bezeichnet.
+  \end{definition}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Kryptosystem}
+  \framesubtitle{Entschlüsselungsalgorithmus}
+  \begin{definition}
+    Eine Abbildung $D\colon \mathcal{C}\times
+    \mathcal{K}\rightarrow\mathcal{M}$ mit der Eigenschaft $\forall
+    m\in\mathcal{M}\colon D(E(m,k_{e}), k_{d})=m$ für $k_{e}\in K_{e},
+    k_{d}\in K_{d}$ und mit $f(K_{e})= K_{d}$ heißt \emph{Entschlüsselungsalgorithmus}.
+  \end{definition}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Kryptosystem}
+  \begin{definition}
+  Ein \emph{Kryptosystem}~$\mathcal{S}$ ist ein Fünftupel
+  $\mathcal{S}=(\mathcal{M}, \mathcal{C}, \mathcal{K}, E, D)$.
+  \end{definition}
+\end{frame}
 
 \end{document}
