--- a/kubieziel-itsich/vorlesung.ltx
+++ b/kubieziel-itsich/vorlesung.ltx
@@ -152,6 +152,9 @@
   \end{definition}
 \end{frame}
 
+\subsection{Kryptosystem}
+
+
 \begin{frame}
   \frametitle{Kryptosystem}
   \framesubtitle{Alphabet}
@@ -221,6 +224,9 @@
   \end{definition}
 \end{frame}
 
+\subsection{Geschichtlicher Abriss}
+
+
 \begin{frame}
   \frametitle{Geschichtlicher Abriss}
   \begin{itemize}
@@ -235,6 +241,9 @@
   \item Quantenkryptographie
   \end{itemize}
 \end{frame}
+
+\subsection{Kryptoanalyse}
+
 
 \begin{frame}
   \frametitle{Kryptoanalyse}
@@ -258,4 +267,9 @@
   \framesubtitle{Rubber-Hose-Angriff}
   \includegraphics[width=\textwidth]{bilder/security}
 \end{frame}
+
+\subsection{Verschlüsselungsalgorithmen}
+
+
+
 \end{document}
