Logo der FSU eingebunden
git-svn-id: https://svn.lug-jena.de/uni-skripte@3107 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kubieziel-itsich/vorlesung.ltx
+++ b/kubieziel-itsich/vorlesung.ltx
@@ -39,8 +39,8 @@
 \title{IT-Sicherheit}
 \author{Jens Kubieziel}
 \institute{Fakultät für Mathematik und Informatik}
-%\pgfdeclareimage[height=1cm]{logo}{fsu-jena}
-%\logo{\pgfuseimage{logo}}
+\pgfdeclareimage[height=1cm]{logo}{bilder/Uni-Jena-logo}
+\logo{\pgfuseimage{logo}}
 
 \begin{document}
 \begin{frame}
