Folie zur Geschichte
· Bild einer Skytale
· Folie mit Bild

git-svn-id: https://svn.lug-jena.de/uni-skripte@3109 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kubieziel-itsich/vorlesung.ltx
+++ b/kubieziel-itsich/vorlesung.ltx
@@ -247,6 +247,16 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}
+  \frametitle{Geschichtlicher Abriss}
+  \framesubtitle{Skytale}
+\href{http://upload.wikimedia.org/wikipedia/commons/5/51/Skytale.png}{\includegraphics[width=.75\textwidth]{bilder/Skytale}}
+
+Quelle:
+\href{https://secure.wikimedia.org/wikipedia/en/wiki/Scytale}{Wikipedia:
+Scytale}
+\end{frame}
+
 \subsection{Kryptoanalyse}
 
 
