Table of contents auskommentiert.
Am Anfang brauche ich kein Inhaltsverzeichnis. Daher kann das raus.

git-svn-id: https://svn.lug-jena.de/uni-skripte@3110 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kubieziel-itsich/vorlesung.ltx
+++ b/kubieziel-itsich/vorlesung.ltx
@@ -47,9 +47,9 @@
   \titlepage{}
 \end{frame}
 
-\begin{frame}{Gliederung}
-  \tableofcontents
-\end{frame}
+% \begin{frame}{Gliederung}
+%   \tableofcontents
+% \end{frame}
 
 \section{Organisatorisches}
 
