Beschreibung, was Sicherheit ist
git-svn-id: https://svn.lug-jena.de/uni-skripte@3118 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kubieziel-itsich/einleitung.ltx
+++ b/kubieziel-itsich/einleitung.ltx
@@ -51,4 +51,40 @@
     Auftrag eines Benutzers aktiv sind.
   \end{definition}
 \end{frame}
+
+\begin{frame}
+  \frametitle{Was ist Sicherheit?}
+  \begin{alertblock}{}
+    Was ist Sicherheit? Wann ist man sicher?
+  \end{alertblock}
+  \pause{}
+  \begin{itemize}
+  \item<+-> Ist Ihr Rechner sicher? Was haben Sie für die Sicherheit
+    des Rechners getan?
+  \item<+-> Schutz des Geldes innerhalb einer Bank
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Sicherheit}
+  \begin{block}{Sicherheit}
+    In der (IT-)Sicherheit geht es die Vermeidung negativer
+    Konsequenzen aus vorsätzlichen und berechtigten Handlungen Dritter.
+  \end{block}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Sicherheit}
+  \begin{itemize}
+  \item<+-> Kernbestandteil von Betrachtungen über Sicherheit ist
+    \emph{Prävention}. Beispiel: Auto, Geld
+  \item<+-> Sicherheit beschäftigt sich mit \emph{vorsätzlichen}
+    Handlungen (siehe nächste Folie).
+  \item<+-> Diese Handlungen heißen \emph{Angriffe}, sind nicht
+    berechtigt und werden von einem \emph{Angreifer} begangen.
+  \item<+-> Ziele von Angriffen sind schützenswerte Güter.
+  \item<+-> Gegenmaßnahmen sollen vor Angriffen schützen.
+  \end{itemize}
+\end{frame}
+
 \end{document}
