--- a/kubieziel-itsich/einleitung.ltx
+++ b/kubieziel-itsich/einleitung.ltx
@@ -91,6 +91,7 @@
   \frametitle{Euro-Schein}
   \begin{columns}
     \begin{column}{.6\textwidth}
+      \onslide<2>{%
       \begin{itemize}
       \item stärkefreie Baumwolle
       \item Wasserzeichen
@@ -100,7 +101,7 @@
       \item Mikroschrift
       \item Infrarot- und UV"=Licht
       \item EURion-Konstellation
-      \end{itemize}
+      \end{itemize}}
     \end{column}
     \begin{column}{.4\textwidth}
       \includegraphics[width=\textwidth]{bilder/EUR500v}
@@ -158,6 +159,21 @@
   \item Verbindlichkeit
   \item Anonymität und Pseudonymität
   \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Schutzziele}
+  \framesubtitle{Authentizität}
+  \begin{definition}
+    Ein Objekt oder Subjekt wird als \emph{authentisch} bezeichnet,
+    wenn dessen Echtheit und Glaubwürdigkeit anhand einer eindeutigen
+    Identität und charakteristischer Eigenschaften überprüfbar ist.
+  \end{definition}
+  \pause{}
+  \begin{block}{}
+    Die Prüfung der Authentizität wird als \emph{Authentifikation}
+    bezeichnet. In der Praxis werden meist nur Subjekte authentifiziert.
+  \end{block}
 \end{frame}
 
 \end{document}
