weitere Schutzziele erwähnt
git-svn-id: https://svn.lug-jena.de/uni-skripte@3127 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kubieziel-itsich/einleitung.ltx
+++ b/kubieziel-itsich/einleitung.ltx
@@ -224,5 +224,52 @@
   \end{block}
 \end{frame}
 
+\begin{frame}
+  \frametitle{Schutzziele}
+  \framesubtitle{Verbindlichkeit}
+  \begin{definition}
+    \emph{Verbindlichkeit} einer Aktion wird gewährleistet, wenn ein
+    Subjekt diese im Nachhinein nicht abstreiten kann.
+  \end{definition}
+\end{frame}
 
+\begin{frame}
+  \frametitle{Schutzziele}
+  \framesubtitle{Anonymität und Pseudonymität}
+  \begin{description}
+  \item[Anonymität] Personenbezogene Daten werden so verändert, dass
+    diese nicht oder nur mit unverhältnismäßigem Aufwand einer Person
+    zugeordnet werden können.
+  \item[Pseudonymität] Personenbezogene Daten werden so verändert, dass
+    diese  nur unter Kenntnis der Zuordnungsvorschrift einer Person
+    zugeordnet werden können.
+  \end{description}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Pseudonyme}
+  \begin{itemize}
+  \item<+-> Dirk Felsenheimer\pause{} Bela B.
+  \item<+-> Anis Mohamed Youssef Ferchichi\pause{} Bushido
+  \item<+-> Johannes Gensfleisch\pause{} Johannes Gutenberg
+  \item<+-> Horst Köhler\pause{}Guildo Horn
+  \item<+-> Nicolas Bourbaki, Boto von Querenburg
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Sicherheit}
+  IT-Sicherheit soll die oben genannten Schutzziele
+  umsetzen/garantieren.\pause{}
+
+  \begin{alertblock}{Eselbrücke}
+    Security is a PAIN:
+    \begin{itemize}
+    \item Privacy
+    \item Authenticity
+    \item Integrity
+    \item Non-repudiation
+    \end{itemize}
+  \end{alertblock}
+\end{frame}
 \end{document}
