Literaturangaben zu Aufgabe 2 (Blatt 1)
git-svn-id: https://svn.lug-jena.de/uni-skripte@3137 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kubieziel-itsich/uebung1-dns.ltx
+++ b/kubieziel-itsich/uebung1-dns.ltx
@@ -175,4 +175,28 @@ IP"=Adresse von \textcolor{blue}{Absender} bzw. \textcolor{green}{Empfänger}
 0040  \textcolor{blue}{64 65} \textcolor{green}{00} \textcolor{red}{00 01 00 01}                              de.....
 \end{Verbatim}
 \end{frame}
+
+\begin{frame}
+  \frametitle{Lektüre}
+  In der deutschsprachigen Wikipedia werden die Protokolle weiter
+  besprochen. Untenstehend finden Sie Verweise auf die entsprechenden
+  Artikel und auch auf Originaldokumente.
+  \begin{itemize}
+  \item
+    \href{https://secure.wikimedia.org/wikipedia/de/wiki/IPv4\#Header-Format}{Wikipedia:
+      Format des IPv4"=Headers}
+  \item \href{http://www.ietf.org/rfc/rfc0791.txt}{RFC 791 (insbesondere
+      Abschnitt 3.1)}
+  \item
+    \href{https://secure.wikimedia.org/wikipedia/de/wiki/User_Datagram_Protocol\#UDP-Datagramm}{Wikipedia:
+      Format des UDP"=Headers}
+  \item \href{http://www.ietf.org/rfc/rfc0768.txt}{RFC 768}
+  \item \href{http://www.ietf.org/rfc/rfc1035.txt}{RFC 1035
+      (insbesondere Abschnitt 4.1.1.)}
+  \item Der
+    \href{https://secure.wikimedia.org/wikipedia/de/wiki/Domain_Name_System}{Wikipedia"=Artikel
+    zu DNS} hat eher allgemeine Informationen. Das Format des Pakets
+  ist in oben genanntem RFC beschrieben.
+  \end{itemize}
+\end{frame}
 \end{document}
