--- a/kubieziel-itsich/krypto.ltx
+++ b/kubieziel-itsich/krypto.ltx
@@ -1,8 +1,9 @@
 \input{kopfteil.ltx}
 \subtitle{Kryptographie}
+\date{1.\,November~2010}
 
 \begin{document}
-\begin{frame}[label=orga]
+\begin{frame}
   \titlepage{}
 \end{frame}
 
@@ -62,7 +63,7 @@
     und $K_{d}$ sowie einer bijektiven Abbildung $f\colon
     K_{e}\rightarrow K_{d}$.
   \end{definition}
-  Somit gibt es für jeden $k_{e}\in K_{E}$ einen passenden $k_{d}\in
+  Somit gibt es für jeden $k_{e}\in K_{e}$ einen passenden $k_{d}\in
   K_{d}$. Also $f(K_{e})= K_{d}$.
 \end{frame}
 
@@ -102,7 +103,7 @@
   \frametitle{Geschichtlicher Abriss}
   \begin{itemize}
   \item Skytale
-  \item Caesar"=Code
+  \item \textsc{Caesar}"=Code
   \item Vigenère"=Chiffre (Friedman"=Test)
   \item ENIGMA
   \item DES
@@ -175,7 +176,7 @@ Scytale}
   \begin{exampleblock}{Freimaurercode}
     {\pigpenfont HEUTZUTAGE NUTZEN DAS EHER SCHULKINDER.}    
   \end{exampleblock}
-  \begin{exampleblock}{Caesar-Chiffre}<2->
+  \begin{exampleblock}{\textsc{Caesar}-Chiffre}<2->
     KHXWCXWDJHQXWCHQGDVHKHUVFKXONLQGHU
   \end{exampleblock}
   \begin{exampleblock}{ROT-13}<3->
