--- a/kubieziel-itsich/einleitung.ltx
+++ b/kubieziel-itsich/einleitung.ltx
@@ -237,6 +237,27 @@
   \end{block}
 \end{frame}
 
+\begin{frame}
+  \frametitle{Schutzziele}
+  \framesubtitle{Verbindlichkeit}
+  \begin{definition}
+    \emph{Verbindlichkeit} einer Aktion wird gewährleistet, wenn ein
+    Subjekt diese im Nachhinein nicht abstreiten kann.
+  \end{definition}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Schutzziele}
+  \framesubtitle{Anonymität und Pseudonymität}
+  \begin{description}
+  \item[Anonymität] Personenbezogene Daten werden so verändert, dass
+    diese nicht oder nur mit unverhältnismäßigem Aufwand einer Person
+    zugeordnet werden können.
+  \item[Pseudonymität] Personenbezogene Daten werden so verändert, dass
+    diese  nur unter Kenntnis der Zuordnungsvorschrift einer Person
+    zugeordnet werden können.
+  \end{description}
+\end{frame}
 
 \begin{frame}
   \frametitle{Schutzziele}
@@ -276,7 +297,7 @@
   IT-Sicherheit soll die oben genannten Schutzziele
   umsetzen/garantieren.\pause{}
 
-  \begin{alertblock}{Eselsbrücke}
+  \begin{alertblock}{Eselbrücke}
     Security is a PAIN:
     \begin{itemize}
     \item Privacy
@@ -467,4 +488,5 @@
   \framesubtitle{Botnets}
 \includegraphics[width=.8\textwidth]{bilder/bsi-cc-server}
 \end{frame}
+
 \end{document}
