--- a/kubieziel-itsich/einleitung.ltx
+++ b/kubieziel-itsich/einleitung.ltx
@@ -297,7 +297,7 @@
   IT-Sicherheit soll die oben genannten Schutzziele
   umsetzen/garantieren.\pause{}
 
-  \begin{alertblock}{Eselbrücke}
+  \begin{alertblock}{Eselsbrücke}
     Security is a PAIN:
     \begin{itemize}
     \item Privacy
@@ -488,6 +488,5 @@
   \framesubtitle{Botnets}
 \includegraphics[width=.8\textwidth]{bilder/bsi-cc-server}
 \end{frame}
-
 
 \end{document}
