k_e und k_d etwas besser erklärt
git-svn-id: https://svn.lug-jena.de/uni-skripte@3181 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kubieziel-itsich/krypto.ltx
+++ b/kubieziel-itsich/krypto.ltx
@@ -64,7 +64,8 @@
     und $K_{d}$ sowie einer bijektiven Abbildung $f\colon
     K_{e}\rightarrow K_{d}$.
   \end{definition}
-  Somit gibt es für jeden $k_{e}\in K_{e}$ einen passenden $k_{d}\in
+  Somit gibt es für jeden Schlüssel zur Verschlüsselung $k_{e}\in
+  K_{e}$ einen passenden Schlüssel zur Entschlüsselung $k_{d}\in
   K_{d}$. Also $f(K_{e})= K_{d}$.
 \end{frame}
 
