Details zur Geschichte ergänzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@3184 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kubieziel-itsich/krypto.ltx
+++ b/kubieziel-itsich/krypto.ltx
@@ -2,6 +2,14 @@
 \subtitle{Kryptographie}
 \date{1.\,November~2010}
 
+% Counter fuer das Vigenère-Quadrat
+\newcounter{cnt}
+\setcounter{cnt}{1}
+\whiledo{\thecnt < 27}{%
+  \DeclareGraphicsRule{.\thecnt}{\ifpdf mps\else eps\fi}{*}{}%
+  \stepcounter{cnt}%
+}
+
 \begin{document}
 \begin{frame}
   \titlepage{}
@@ -131,6 +139,69 @@
 Quelle:
 \href{https://secure.wikimedia.org/wikipedia/en/wiki/Scytale}{Wikipedia:
 Scytale}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Vigenère-Chiffre}
+  \begin{columns}
+    \begin{column}{.6\textwidth}
+      \begin{itemize}
+      \item gefunden von \textsc{Giovan Battista Bellaso} und später
+        \textsc{Blaise de Vigenère} zugeschrieben
+      \item polyalphabetische Chiffre
+      \item Grundlage für One Time Pad (OTP)
+      \end{itemize}
+    \end{column}
+    \begin{column}{.4\textwidth}
+      \includegraphics[width=.8\textwidth]{bilder/Vigenere}
+    \end{column}
+  \end{columns}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Vigenère-Chiffre}
+  \begin{minipage}{.7\textwidth}
+    \ttfamily\tiny\raggedright~~~%
+    \setcounter{cnt}{1}%
+    \whiledo{\thecnt < 27}{%
+      \alph{cnt}~~%
+      \stepcounter{cnt}%
+    }\\
+    \newcounter{cntline}\setcounter{cntline}{1}%
+    \newcounter{cntcol}%
+    \setcounter{cnt}{1}%
+    \whiledo{\thecntline < 27}{%
+      \ifthenelse{\thecnt > 26}{\addtocounter{cnt}{-26}}{}%
+      \alph{cnt}~~%
+      \setcounter{cntcol}{1}%
+      \whiledo{\thecntcol < 27}{%
+        \ifthenelse{\thecnt > 26}{\addtocounter{cnt}{-26}}{}%
+        \Alph{cnt}~~%
+        \stepcounter{cnt}%
+        \stepcounter{cntcol}%
+      }\\
+      \stepcounter{cnt}%
+      \stepcounter{cntline}%
+    }
+  \end{minipage}
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{Vigenère-Chiffre}
+  Kryptoanalyse erfolgt über Erkennen der Schlüssellänge und Analyse
+  der Häufigkeiten:
+  \pause{}
+  \begin{Verbatim}[commandchars=\\\{\}]
+    LIG\textcolor{blue}{OML}OQROBR\textcolor{green}{NIP}XYPKYQ\textcolor{green}{NIP}GMC\textcolor{green}{NIP}RSJERE\textcolor{blue}{OML}OW\textcolor{red}{XOM}ARIL
+    CFCCXCRX\textcolor{red}{XOM}EDWGMLBSINOVGYHCERKSXROPZKVGWKCRIGWXCHX
+  \end{Verbatim}
+\end{frame}
+
+\begin{frame}
+  \frametitle{ENIGMA}
+  \includegraphics[width=.7\textwidth]{bilder/enigma-ru}
+
+  Quelle: Bundesarchiv
 \end{frame}
 
 \subsection{Kryptoanalyse}
