--- a/kubieziel-itsich/kopfteil.ltx
+++ b/kubieziel-itsich/kopfteil.ltx
@@ -32,6 +32,7 @@
 \usepackage{graphicx}
 \usepackage{pigpen}
 \usepackage{pgfpages}
+\usepackage{fancyvrb}
 
 \mode<presentation>{%
   \usetheme{AnnArbor}
