--- a/kubieziel-itsich/krypto.ltx
+++ b/kubieziel-itsich/krypto.ltx
@@ -242,6 +242,8 @@ Scytale}
   Quelle: \href{http://xkcd.com/}{xkcd}.
 \end{frame}
 
+
+
 \subsection{Verschlüsselungsalgorithmen}
 
 \begin{frame}
@@ -353,6 +355,46 @@ Weitere wurden später entwickelt und spezifiziert. Beispiele sind der
     Verschlüsselung des aktuellen Blocks mit ein.
   \item<+-> $c_{i}= E_{k} (m_{i}\oplus c_{i-1})$
   \item<+-> Initialisierungsvektor
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Data Encryption Algorithm}
+  \framesubtitle{Geschichte}
+  \begin{itemize}
+  \item<+-> vor den 1970er Jahren keine systematische öffentliche Forschung
+  \item<+-> 1973/4 Ausschreibung für öffentlichen Algorithmus durch NBS
+  \item<+-> eine Einreichung von IBM: Lucifer
+  \item<+-> Evaluierung durch NSA
+  \item<+-> 23.\,November~1976 Veröffentlichung als FIPS PUB 46
+  \item<+-> 1987 und 1993 nolens volens reevaluiert
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Data Encryption Algorithm}
+  \framesubtitle{Design}
+  \begin{itemize}
+  \item<+-> Feistel-Chiffre
+  \item<+-> 64 Bit Blocklänge, 56~Bit (effektive) Schlüssellänge
+  \item<+-> Rundenfunktion und Schlüsselexpansion
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Data Encryption Algorithm}
+  \framesubtitle{Angriff}
+  \begin{itemize}
+  \item<+-> Schlüssellänge
+    \begin{itemize}
+    \item<+-> 1976 Diffie/Hellman: Parallelrechner für 20~Mio.\,USD
+      benötigt einen Tag
+    \item<+-> 1983 Wiener: Rechner für 1~Mio.\,USD benötigt 3,5~Stunden
+    \item<+-> 1998 EFF: Rechner für 250\,000~USD benötigt 56~Stunden
+    \item<+-> 2009 RUB: Rechner für 10\,000~USD benötigt 6~Tage
+    \end{itemize}
+  \item<+-> "`schwache Schlüssel"' (weak keys)
+  \item<+-> Differentielle Kryptoanalyse (Biham/Shamir)
   \end{itemize}
 \end{frame}
 
