Überschriften bei AES anngepasst
git-svn-id: https://svn.lug-jena.de/uni-skripte@3190 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kubieziel-itsich/krypto.ltx
+++ b/kubieziel-itsich/krypto.ltx
@@ -519,15 +519,8 @@ g
     Addition der Matrix $M$ mit dem Rundenschlüssel modulo $2$
   \end{frame}
 
-\subsection{Angriffe gegen AES}
-
 \begin{frame}
-  \frametitle{Der effektivste Weg}
-  \includegraphics[width=\textwidth]{security}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Mögliche Angriffe}
+  \frametitle{Angriffe}
   \begin{itemize}
   \item<+-> Lineare und differenzielle Kryptoanalyse
   \item<+-> XSL-Angriff
@@ -536,7 +529,7 @@ g
 \end{frame}
 
 \begin{frame}
-  \frametitle{Mögliche Angriffe}
+  \frametitle{Angriffe}
   \framesubtitle{Darstellung als Kettenbruch}
 \begin{gather*}
   a_{i,j}^{(6)} = K+ \sum\limits_{\substack{e_{5}\in\mathcal{E}\\
