--- a/kubieziel-itsich/krypto.ltx
+++ b/kubieziel-itsich/krypto.ltx
@@ -254,7 +254,21 @@ Scytale}
   Quelle: \href{http://xkcd.com/}{xkcd}.
 \end{frame}
 
-
+\begin{frame}
+  \frametitle{Kerckhoffssche Prinzipien}
+  \begin{enumerate}
+  \item<+-> Wenn ein System nich theoretisch beweisbar sicher ist, so
+    sollte es praktisch sicher sein.
+  \item<+-> Das Design eines System sollte keine Geheimhaltung
+    erfordern und sollte sich ohne Gefahr in den Händen des Feindes
+    befinden können.
+  \item<+-> Der Schlüssel soll einfach zu merken und zu ändern sein.
+  \item<+-> Kryptogramme sollen per Telegraph übertragbar sein.
+  \item<+-> Ein Kryptosystem soll portabel sein und dessen Bedienung
+    nicht mehrere Menschen erfordern.
+  \item<+-> Ein Kryptosystem muss einfach bedienbar sein.
+  \end{enumerate}
+\end{frame}
 
 \subsection{Verschlüsselungsalgorithmen}
 
